add a repository for VirusTotal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Test Security Thierry</string>
+    <string name="total_api_key">NTZjMDEwMjM2OTgwZDU4YTBhNjA4ZjhiNDQ3NTE3MTQzYjNkODk4NzhjZDRjY2VlNDIxZTljZGM1NDA1NTBjYw</string>
 </resources>
