--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
-    <string name="app_name">Test Security Thierry</string>
+    <string name="app_name">Test Compose News Thierry</string>
     <string name="total_api_key">wMjM2OTgwZDU4YTBhNjA4ZjhiNDQ3NTE3MTQzYjNkODk4NzhjZDRjY2VlNDIxZTljZGM1NDA1NTBjYw</string>
+    <string name="unexpected_server_data">Unexpected server data</string>
 </resources>
